Update build.gradle
* Add test coverage plugin, jacoco and its task
* Add automatic test generation tool Randoop
* Fix runClientClass task by adding jvmArgs